[gd_scene load_steps=9 format=3 uid="uid://dqntcd0igibuh"]

[ext_resource type="Script" path="res://Effects/Effects.gd" id="1_0maor"]
[ext_resource type="PackedScene" uid="uid://bstfae5ojldgk" path="res://Effects/Flash/Flash.tscn" id="1_5wfe0"]
[ext_resource type="PackedScene" uid="uid://bh3f2hipvyq8h" path="res://Effects/BgColourSwap/BgColourSwap.tscn" id="2_g0kft"]
[ext_resource type="PackedScene" uid="uid://bdm072wmttdu5" path="res://Effects/Spectrum/Spectrum.tscn" id="5_3ydnu"]
[ext_resource type="PackedScene" uid="uid://ngvpanc7v1dc" path="res://Effects/PirateDvd/PirateDvd.tscn" id="6_4xbew"]
[ext_resource type="PackedScene" uid="uid://m7bcgrtmfxdk" path="res://Effects/PirateSpin/PirateSpin.tscn" id="6_oovk1"]
[ext_resource type="PackedScene" uid="uid://xngcexsca088" path="res://Effects/BorderFollowSquares/BorderFollowSquares.tscn" id="7_o82xt"]
[ext_resource type="PackedScene" uid="uid://byfbrgh0sut1s" path="res://Effects/PostProcess/PostProcess.tscn" id="8_448pb"]

[node name="Effects" type="Node2D"]
script = ExtResource("1_0maor")

[node name="BgColourSwap" parent="." instance=ExtResource("2_g0kft")]

[node name="Flash" parent="." instance=ExtResource("1_5wfe0")]

[node name="Spectrum" parent="." instance=ExtResource("5_3ydnu")]
position = Vector2(24, 0)

[node name="PirateSpin" parent="." instance=ExtResource("6_oovk1")]

[node name="PirateDvd" parent="." instance=ExtResource("6_4xbew")]

[node name="BorderFollowSquares" parent="." instance=ExtResource("7_o82xt")]

[node name="PostProcess" parent="." instance=ExtResource("8_448pb")]
top_level = true
